# why-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: diagram.dot  fcm_test.rs  intervention.rs  io_test.rs  linear_regression.rs  pc_test.rs  simple.rs
src/: dag.rs  error.rs  fcm.rs  intervention.rs  lib.rs  macros.rs  main.rs  mechanism.rs  pc.rs
src/core/: mod.rs
src/discovery/: mod.rs  pc.rs
src/io/: mod.rs
src/scm/: mod.rs
src/stats/: fisher_z.rs  mod.rs
tests/: dot_parsing.rs  linear_regression.rs
