[package]
name = "why_rs"
version = "0.2.1"
edition = "2024"
description = "A Causal Inference library for Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jwhogg/why-rs"
readme = "README.md"
keywords = ["rust", "Causal_Inference", "Causal_Discovery"]
categories = ["algorithms","mathematics","data-structures"]

[dependencies]
petgraph = { version = "0.8", features = ["dot_parser"] }
polars = "0.52.0"
rand = "0.8"
dot-parser = "0.6"
linfa = "0.8"
linfa-linear = "0.8"
ndarray = "0.16"
rand_distr = "0.4"